<resources>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_screen_title">Beneficiary Management System</string>
    <string name="login">login</string>
    <string name="app_name">Humansis Vendor</string>
    <string name="login_screen_subtitle">HUMANSIS VENDOR</string>
    <string name="version">v%1$s</string>
    <string name="vendor_title">Select Product</string>
    <string name="selected_items">Selected Items</string>
    <string name="no_items_selected">No items selected</string>
    <string name="logout">Log out</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="clear_all">Clear All</string>
    <string name="checkout">Checkout</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="products">Products</string>
    <string name="please_scan_voucher">Please scan a voucher or pay by card</string>
    <string name="wrong_password">Wrong username or password</string>
    <string name="cannot_proceed_with_purchase_dialog_title">Failed</string>
    <string name="cannot_proceed_with_purchase_dialog_message">Cannot proceed with the purchase until it is paid.</string>
    <string name="are_you_sure_dialog_title">Are you sure?</string>
    <string name="clear_cart_dialog_message">Are you sure you want to remove all items from the cart?</string>
    <string name="remove_product_from_cart_dialog_message">Are you sure you want to remove this product from your cart?</string>
    <string name="already_scanned_dialog_title">Voucher Already Used</string>
    <string name="already_scanned_dialog_message">You already used this voucher</string>
    <string name="cannot_scan_booklet_dialog_message">You cannot scan a booklet code, you have to scan the vouchers individually.</string>
    <string name="wrong_code_title">Error</string>
    <string name="wrong_code_dialog_message">Your code isn\'t the right format, are you sure it is a BMS Voucher?</string>
    <string name="logout_dialog_message">Are you sure you want to log out?</string>
    <string name="error_while_proceeding">Something went wrong during proceeding with the purchase. Do you have enough space on your device?</string>
    <string name="please_enter_password">Please enter the voucher\'s password</string>
    <string name="limited_tries_text">You have only three tries before your booklet deactivates</string>
    <string name="the_booklet_is_deactivated">The booklet is deactivated</string>
    <string name="you_just_scanned_a_voucher_from_a_different_booklet">This voucher belongs to a different booklet than others recently scanned</string>
    <string name="the_voucher_is_of_wrong_currency">This voucher is of different currency</string>
    <string name="tries_exceeded_booklet_deactivated">You have exceeded your tries at password, your booklet will be deactivated</string>
    <string name="booklet_deactivated">Booklet deactivated</string>
    <string name="wrong_voucher_password">You didn\'t type the right password. You have only %1$d try left.</string>
    <string name="wrong_voucher_password_plural">You didn\'t type the right password. You have only %1$d tries left.</string>
    <string name="go_to_cart">Show cart</string>
    <string name="back_button">back</string>
    <string name="pay_by_voucher">Scan a\nvoucher</string>
    <string name="pay_by_card">Pay by\ncard</string>
    <string name="payment">Payment</string>
    <string name="no_internet_connection">Please make sure you are connected to the internet</string>
    <string name="could_not_synchronize_data_with_server">Could not synchronize data with the server</string>
    <string name="data_were_successfully_synchronized">Data were successfully synchronized with the server</string>
    <string name="add_to_cart">Add to\ncart</string>
    <string name="please_enter_price">Please enter price.</string>
    <string name="pin">PIN</string>
    <string name="please_enter_pin">Please enter PIN for your card</string>
    <string name="no_nfc_available">NFC is not available</string>
    <string name="you_need_to_enable_nfc">You need to enable NFC</string>
    <string name="card_successfully_paid_new_balance">New balance on the card: %1$s</string>
    <string name="not_enough_money_on_card">Not enough money on the card</string>
    <string name="scan_card">Please scan the card</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="card_locked">This card is locked.</string>
    <string name="card_error">Error. Try again please.</string>
    <string name="invalid_data">Error: invalid data on the card</string>
    <string name="card_wrong_currency">The card is of different currency</string>
    <string name="tag_lost_card_error">Scanning interrupted. Please scan the card again.</string>
    <string name="success">Success</string>
    <string name="menu">menu</string>
    <string name="synchronize">synchronize</string>
    <string name="humansis">humansis</string>
    <string name="loading">Loading…</string>
    <string name="unknown">Unknown</string>
    <string name="read_balance">Read balance</string>
    <string name="home">Home</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="utilities">Utilities</string>
    <string name="status">Status</string>
    <string name="close">Close</string>
    <string name="empty_cart">Your shopping cart is empty</string>
    <string name="transactions_to_reimburse">Transactions to reimburse</string>
    <string name="no_transactions_to_reimburse">No transactions to reimburse</string>
    <string name="reimbursed_invoices">Reimbursed invoices</string>
    <string name="no_reimbursed_invoices">No reimbursed invoices</string>
    <string name="no_purchases">No purchases</string>
    <string name="unsynced_transactions">Synchronize to display all transactions. \n Unsynchronized: %1$d</string>
    <string name="humansis_invoice_number">Humansis Invoice No. %1$d</string>
    <string name="date">Date: %1$s</string>
    <string name="quantity">Quantity: %1$d</string>
    <string name="total_price">Total: %1$.2f %2$s</string>
    <string name="project">Project: </string>
    <string name="export_logs">Send logs</string>
    <string name="send_email_address" translatable="false">support@humansis.org, mobilne-pin@quanti.cz</string>
    <string name="logs_dialog_title">Share logs</string>
    <string name="logs_dialog_message">Would you like to share logs?</string>
    <string name="logs_dialog_email_button">Share</string>
    <string name="environment">Environment: %1$s</string>
    <string name="confirm">Confirm</string>
    <string name="scan_card_to_fix">Scanning did not finish properly and thus the data on the card might be incomplete.\n\nScan the card again to finish the payment.</string>
    <string name="payment_in_progress">Payment in progress\n\nDo not remove card</string>
    <string name="error_service_unavailable">Service is unavailable</string>
    <string name="no_products">No products</string>
    <string name="all_products">All products</string>
    <string name="only_one_cashback_item_allowed">There can be only one cashback item in the shopping cart</string>
    <string name="item_removed_from_cart">%1$s removed from cart</string>
    <string name="network_connection_lost">Network connection lost</string>
    <string name="connected_to_network">Connected to network</string>
    <string name="cashback_with_voucher">Cashback cannot be purchased with a Voucher</string>
    <string name="limit_exceeded">Limit exceeded:</string>
    <string name="multiple_limits_exceeded">Multiple limits exceeded:</string>
    <string name="commodity_type_not_allowed">You are not allowed to purchase:</string>
    <string name="remove_commodity_type">\n\nDo you wish to remove all %1$s products from cart?</string>
    <string name="commodity_type_exceeded">%1$s products in your cart exceed your limit of %2$s.</string>
    <string name="please_update_cart">Please update your cart accordingly.</string>
    <string name="remove_restricted_products">Remove restricted products</string>
    <string name="scanning_card_balance">Total balance: %1$s</string>
    <string name="expiration_date_formatted">\nExpiration date: %1$s</string>
    <string name="product_type_limit_formatted">\n%1$s: %2$s remaining</string>
    <string name="food">Food</string>
    <string name="nonfood">Non-food</string>
    <string name="cashback">Cashback</string>
    <string name="pin_too_short">PIN must be 4 digits</string>
    <string name="card_wrong_user">This card was assigned to a different user</string>
    <string name="syncing">Syncing</string>
    <string name="purchases_upload">Uploading purchases</string>
    <string name="booklets_upload">Uploading deactivated booklets</string>
    <string name="booklets_deactivated_download">Downloading deactivated booklets</string>
    <string name="booklets_protected_download">Downloading protected booklets</string>
    <string name="blocked_cards_download">Downloading blocked smartcards</string>
    <string name="rd_upload">Uploading RD</string>
    <string name="rd_download">Downloading RD</string>
    <string name="categories_download">Downloading product categories</string>
    <string name="products_download">Downloading products</string>
    <string name="transactions_download">Downloading transactions to reimburse</string>
    <string name="invoices_download">Downloading invoices</string>
    <string name="card_balance_expired">Card balance has expired</string>
    <string name="logs_upload">Uploading logs</string>
    <string name="please_dont_kill">Please, do not close the application.</string>
    <string name="no_location_data">No location data received for this vendor</string>
    <string name="token_expired_or_missing">You have been logged out because your authentication token has expired or is missing.</string>
</resources>
