<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/checkoutFooter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightGrey"
    android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toProductsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:elevation="3dp"
        android:text="@string/go_to_cart"
        app:icon="@drawable/shopping_cart"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:iconGravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelButton"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:elevation="3dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:icon="@drawable/clear"
        app:iconGravity="start"
        app:layout_constraintStart_toEndOf="@+id/toProductsButton"
        app:layout_constraintEnd_toStartOf="@+id/proceedButton"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:elevation="3dp"
        android:text="@string/proceed"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:icon="@drawable/check"
        app:iconGravity="start"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

