<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/checkoutFooter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/screenBackgroundColor">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:backgroundTint="@color/blue_button_color"
        android:text="@string/back_button"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        android:stateListAnimator="@null"
        app:icon="@drawable/arrow_back"
        app:iconTint="@color/white"
        app:iconGravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/center"
        app:elevation="0dp"
        style="@style/Widget.MaterialComponents.Button"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearAllButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:backgroundTint="@color/red_button_color"
        android:text="@string/clear_all"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        android:stateListAnimator="@null"
        app:icon="@drawable/clear"
        app:iconTint="@color/white"
        app:iconGravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/center"
        app:elevation="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/proceedButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:backgroundTint="@color/green"
        android:text="@string/proceed"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        android:stateListAnimator="@null"
        android:visibility="gone"
        app:icon="@drawable/ic_check"
        app:iconTint="@color/white"
        app:iconGravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/center"
        app:elevation="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

