<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screenBackgroundColor">

    <TextView
        android:id="@+id/paymentTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/payment"
        android:textColor="@color/black"
        android:textSize="@dimen/fragment_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="150dp"
        android:layout_marginEnd="10dp"
        android:text="@string/pay_by_voucher"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/button_text"
        app:icon="@drawable/photo_camera"
        app:iconTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/checkoutFooter"
        app:layout_constraintEnd_toStartOf="@id/center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentTitleTextView"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="1dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        tools:background="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/payByCardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="150dp"
        android:layout_marginEnd="10dp"
        android:text="@string/pay_by_card"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/button_text"
        app:icon="@drawable/credit_card"
        app:iconTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/checkoutFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/center"
        app:layout_constraintTop_toBottomOf="@+id/paymentTitleTextView"
        app:strokeColor="@color/colorPrimaryDark"
        app:strokeWidth="1dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        tools:background="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/center"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pleaseScanVoucherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/please_scan_voucher"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/fragment_text"
        app:layout_constraintBottom_toTopOf="@id/payByCardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentTitleTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scannedVouchersRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:transcriptMode="alwaysScroll"
        app:layout_constraintBottom_toTopOf="@+id/checkoutFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/center"
        app:layout_constraintTop_toBottomOf="@+id/paymentTitleTextView"
        app:layout_goneMarginStart="5dp" />

    <include
        layout="@layout/item_checkout_vouchers_footer"
        android:id="@+id/checkoutFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
